--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 				<li><a href="fotos.html">Registro Fotográfico</a>
 				</li>
 				
-			   	<li><a href="mapa.html">Articulos Asociados</a>			
+			   	<li><a href=" ">Articulos Asociados</a>			
 				<ul>
 			    <li><a href="https://www.researchgate.net/publication/267639538_LAS_TICs_Y_LA_ENSENANZA_DE_LA_GEOGRAFIA_FISICA">Subtema 1: Los Tic en la Geográfia</a>
 			    <li><a href="https://www.dropbox.com/s/dv619dz9xq61b44/1318-1307-1-PB.pdf?dl=0"> Subtema 2: Uso de los TIC</a></li>
