--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
   <body>
   <style>
 body {
-        background-image: url("DSC01696.jpg " );
+        background-image: url("DSC01696.JPG " );
 } 
  
 </style>	
