--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 				<li><a href="https://www.dropbox.com/s/dopos09yhhgd62m/Uso%20de%20dispositivos%20moviles%20en%20campo.pdf?dl=0"> Subtema 3: Uso de dispositivos moviles</a></li>
 				</ul>
 				</li>
-				<li><a href="fotos.html">Registro Fotográfico</a>
+				<li><a href="fotos.html">Visor Fotográfico</a>
 				</li>
 				
 			   	<li><a href=" ">Articulos Asociados</a>			
@@ -290,7 +290,7 @@ body {
  
 <style type="text/css">#bljaIMGte{float:left;position:relative; ALIGN=justify;}#bljaIMGte .bljaIMGtex {width:100px;position:absolute;top:50px;left:7px;}</style>
 <div id="bljaIMGte">
-<img src="derecha1.jpg" height="235" width="235"  />
+<img src="derecha1.JPG" height="235" width="235"  />
 <div class="bljaIMGtex" style="color:black;">
 
  <p2> <br>  </p2>
@@ -343,7 +343,7 @@ body {
 
  <style type="text/css">#bljaIMGte{float:left;position:relative; ALIGN=justify;}#bljaIMGte .bljaIMGtex {width:100px;position:absolute;top:50px;left:7px;}</style>
 <div id="bljaIMGte">
-<img src="derecha3.jpg" height="200" width="200"  />
+<img src="derecha3.JPG" height="200" width="200"  />
 <div class="bljaIMGtex" style="color:black;">
 
 </div>
@@ -355,7 +355,7 @@ body {
 <aside> 
 <style type="text/css">#bljaIMGte{float:left;position:justify;}#bljaIMGte .bljaIMGtex {width:200px;position:absolute;top:10px;left:14px;}</style>
 <div id="bljaIMGte">
-<img src="derecha.jpg"height="1000" width="235"  /> 
+<img src="derecha.JPG"height="1000" width="235"  /> 
 <div class="bljaIMGtex" style="color:Black;">
 
  <p2> <br>  </p2>
